[gd_scene load_steps=8 format=3 uid="uid://djh5dkaqq22v"]

[ext_resource type="Script" uid="uid://w8014pexwe8y" path="res://scripts/stage.gd" id="1_k1bxl"]
[ext_resource type="Texture2D" uid="uid://qdjli3urk4tm" path="res://icon.svg" id="2_k1bxl"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_78yxw"]
size = Vector2(1536, 880)

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_k366a"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2ugxj"]
size = Vector2(1024, 160)

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_78yxw"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_psigm"]
size = Vector2(288, 26)

[node name="NinjaGardens" type="Node"]
script = ExtResource("1_k1bxl")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="PlayArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayArea"]
visible = false
shape = SubResource("RectangleShape2D_78yxw")

[node name="Stage" type="Node" parent="."]

[node name="Floor" type="StaticBody2D" parent="Stage"]
position = Vector2(0, 256)

[node name="Sprite2D" type="Sprite2D" parent="Stage/Floor"]
position = Vector2(9.53674e-06, -7.62939e-06)
scale = Vector2(1024, 96)
texture = SubResource("PlaceholderTexture2D_k366a")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Stage/Floor"]
position = Vector2(0, 32)
shape = SubResource("RectangleShape2D_2ugxj")

[node name="Platform" type="StaticBody2D" parent="Stage"]
position = Vector2(256, 64)

[node name="Sprite2D" type="Sprite2D" parent="Stage/Platform"]
position = Vector2(7.62939e-06, -4.76837e-07)
scale = Vector2(288, 32)
texture = SubResource("PlaceholderTexture2D_78yxw")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Stage/Platform"]
shape = SubResource("RectangleShape2D_psigm")
one_way_collision = true

[node name="Platform2" type="StaticBody2D" parent="Stage"]
position = Vector2(-256, 64)

[node name="Sprite2D" type="Sprite2D" parent="Stage/Platform2"]
position = Vector2(7.62939e-06, -4.76837e-07)
scale = Vector2(288, 32)
texture = SubResource("PlaceholderTexture2D_78yxw")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Stage/Platform2"]
shape = SubResource("RectangleShape2D_psigm")
one_way_collision = true

[node name="Platform3" type="StaticBody2D" parent="Stage"]
position = Vector2(0, -80)

[node name="Sprite2D" type="Sprite2D" parent="Stage/Platform3"]
position = Vector2(7.62939e-06, -4.76837e-07)
scale = Vector2(288, 32)
texture = SubResource("PlaceholderTexture2D_78yxw")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Stage/Platform3"]
shape = SubResource("RectangleShape2D_psigm")
one_way_collision = true

[node name="CharacterSelector" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -576.0
offset_top = -320.0
offset_right = -536.0
offset_bottom = -280.0

[node name="ColorRect" type="ColorRect" parent="CharacterSelector"]
custom_minimum_size = Vector2(1152, 648)
layout_mode = 0
offset_top = -4.0
offset_right = 1152.0
offset_bottom = 644.0
color = Color(0.0768358, 0.0768358, 0.0768358, 1)

[node name="CenterContainer" type="CenterContainer" parent="CharacterSelector"]
custom_minimum_size = Vector2(1152, 648)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="HBoxContainer" type="HBoxContainer" parent="CharacterSelector/CenterContainer"]
layout_mode = 2
alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="CharacterSelector/CenterContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CharacterSelector/CenterContainer/HBoxContainer/CenterContainer"]
layout_mode = 2

[node name="NinjaButton" type="TextureButton" parent="CharacterSelector/CenterContainer/HBoxContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("2_k1bxl")

[node name="Label" type="Label" parent="CharacterSelector/CenterContainer/HBoxContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Ninja"
horizontal_alignment = 1

[node name="CenterContainer2" type="CenterContainer" parent="CharacterSelector/CenterContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CharacterSelector/CenterContainer/HBoxContainer/CenterContainer2"]
layout_mode = 2

[node name="CowboyButton" type="TextureButton" parent="CharacterSelector/CenterContainer/HBoxContainer/CenterContainer2/VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("2_k1bxl")

[node name="Label" type="Label" parent="CharacterSelector/CenterContainer/HBoxContainer/CenterContainer2/VBoxContainer"]
layout_mode = 2
text = "Cowboy"
horizontal_alignment = 1

[node name="CenterContainer3" type="CenterContainer" parent="CharacterSelector/CenterContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CharacterSelector/CenterContainer/HBoxContainer/CenterContainer3"]
layout_mode = 2

[node name="BigHandsButton" type="TextureButton" parent="CharacterSelector/CenterContainer/HBoxContainer/CenterContainer3/VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("2_k1bxl")

[node name="Label" type="Label" parent="CharacterSelector/CenterContainer/HBoxContainer/CenterContainer3/VBoxContainer"]
layout_mode = 2
text = "Big Hands"
horizontal_alignment = 1

[connection signal="button_up" from="CharacterSelector/CenterContainer/HBoxContainer/CenterContainer/VBoxContainer/NinjaButton" to="." method="_on_ninja_button_button_up"]
[connection signal="button_up" from="CharacterSelector/CenterContainer/HBoxContainer/CenterContainer2/VBoxContainer/CowboyButton" to="." method="_on_cowboy_button_button_up"]
[connection signal="button_up" from="CharacterSelector/CenterContainer/HBoxContainer/CenterContainer3/VBoxContainer/BigHandsButton" to="." method="_on_big_hands_button_button_up"]
